--- a/config/environments/dev.yml
+++ b/config/environments/dev.yml
@@ -43,3 +43,14 @@ cost_optimization:
   delete_endpoints_after_test: true
   preserve_s3_data: true
   endpoint_timeout_minutes: 15
+
+# Redshift Configuration
+redshift:
+  bi_schema: edp_bi_dev
+  cluster_identifier: sdcp-edp-backend-dev
+  database: sdcp
+  db_user: ds_service_user
+  input_schema: edp_cust_dev
+  input_table: caiso_sqmd
+  operational_schema: edp_forecasting_dev
+  operational_table: dayahead_load_forecasts_sdcp
