--- a/config/environments/prod.yml
+++ b/config/environments/prod.yml
@@ -42,3 +42,14 @@ cost_optimization:
   delete_endpoints_after_test: true
   preserve_s3_data: true
   endpoint_timeout_minutes: 30
+
+# Redshift Configuration
+redshift:
+  bi_schema: edp_bi
+  cluster_identifier: sdcp-edp-backend-prod
+  database: sdcp
+  db_user: ds_service_user
+  input_schema: edp_cust
+  input_table: caiso_sqmd
+  operational_schema: edp_forecasting
+  operational_table: dayahead_load_forecasts_sdcp
